--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <li><a href="https://g-genady-solomykin-gs.github.io/my_book/">Книга (Русский)</a></li>
                         <li><a href="https://g-genady-solomykin-gs.github.io/my_book_ja/">Книга (Японский)</a></li>
                         <li><a href="https://g-genady-solomykin-gs.github.io/my_book_eng/">Книга (Английский)</a></li>
+                        <li><a href="https://genady-solomykin.github.io/greatstars-portals/">GreatStars Portals</a></li>
                         <li><a href="https://g-genady-solomykin-gs.github.io/greatstars-usa-/">GreatStars USA</a></li>
                         <li><a href="https://g-genady-solomykin-gs.github.io/greatstars-/">GreatStars Global</a></li>
                         <li><a href="https://g-genady-solomykin-gs.github.io/greatstars_new/">GreatStars New</a></li>
